# tracer

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.heli/: README.md
apps/desktop/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: generate-icons.mjs
apps/desktop/src-tauri/migrations/: 001_init.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/control_plane/: mod.rs
apps/desktop/src-tauri/tests/: desktop_boundary_journey.rs
crates/tracer-acp-client/: Cargo.toml
crates/tracer-acp-client/src/: client.rs  codec.rs  error.rs  lib.rs  message.rs  state.rs  transport.rs
crates/tracer-acp-client/tests/: codec_transport.rs
crates/tracer-control-plane/: Cargo.toml
crates/tracer-control-plane/src/: convert.rs  error.rs  heli_bridge.rs  lib.rs  plane.rs  session_runtime.rs  types.rs
crates/tracer-control-plane/src/presentation/: hub.rs  mod.rs
crates/tracer-control-plane/src/session/: lifecycle.rs  mod.rs
crates/tracer-control-plane/tests/: drain_lifecycle.rs  multi_session.rs  presentation_delivery.rs  vs_scenarios.rs
crates/tracer-domain/: Cargo.toml
crates/tracer-domain/src/: adapter.rs  auth.rs  capabilities.rs  envelope.rs  error.rs  event_type.rs  ids.rs  lib.rs  payload.rs  sequence.rs  session.rs  severity.rs  validate.rs
crates/tracer-domain/tests/: envelope_roundtrip.rs
crates/tracer-heli/: Cargo.toml
crates/tracer-heli/src/: conflict.rs  error.rs  lib.rs  paths.rs  status.rs  types.rs
crates/tracer-heli/tests/: status_fixtures.rs
crates/tracer-heli/tests/fixtures/: README.md
crates/tracer-heli/tests/fixtures/minimal_workspace/.heli-harness/: HARNESS.md  manifest.json
crates/tracer-heli/tests/fixtures/minimal_workspace/.heli-harness/bindings/worktrees/: demo-binding.json
crates/tracer-heli/tests/fixtures/minimal_workspace/.heli-harness/locks/tasks/tracer-w1-demo.write.lock/: lease.json
crates/tracer-heli/tests/fixtures/minimal_workspace/.heli-harness/sessions/: heli-ses-demo-observer.json  heli-ses-demo-writer.json
crates/tracer-heli/tests/fixtures/minimal_workspace/.heli-harness/tasks/tracer-w1-demo/: task.json
crates/tracer-heli/tests/fixtures/minimal_workspace/.heli-harness/tasks/tracer-w1-other/: task.json
crates/tracer-heli/tests/fixtures/minimal_workspace/.heli-harness/workspace/: index.json  schema.json  target.json
crates/tracer-heli/tests/fixtures/minimal_workspace/repos/worktrees/agent-a/: marker.txt
crates/tracer-heli/tests/fixtures/no_workspace/nested/: readme.txt
crates/tracer-heli/tests/fixtures/stale_lease_workspace/.heli-harness/: HARNESS.md
crates/tracer-heli/tests/fixtures/stale_lease_workspace/.heli-harness/locks/tasks/stale-task.write.lock/: lease.json
crates/tracer-heli/tests/fixtures/stale_lease_workspace/.heli-harness/tasks/stale-task/: task.json
crates/tracer-heli/tests/fixtures/stale_lease_workspace/.heli-harness/workspace/: schema.json
crates/tracer-process/: Cargo.toml
crates/tracer-process/src/: config.rs  error.rs  event.rs  handle.rs  ids.rs  lib.rs  readiness.rs
crates/tracer-process/src/platform/: mod.rs  unix.rs  windows.rs
crates/tracer-process/tests/: lifecycle.rs
crates/tracer-runtime-adapter/: Cargo.toml
crates/tracer-runtime-adapter/src/: adapter.rs  config.rs  error.rs  lib.rs  normalize.rs  readiness.rs
crates/tracer-runtime-adapter/tests/: fake_scenarios.rs
crates/tracer-storage/: Cargo.toml
crates/tracer-storage/migrations/: 001_init.sql  002_schema_v2_upgrade_marker.sql
crates/tracer-storage/src/: db.rs  error.rs  ids.rs  lib.rs  models.rs  path.rs  repo.rs  timeutil.rs
crates/tracer-storage/tests/: storage_foundation.rs  upgrade_safety.rs  vs10_persistence_reload.rs
docs/agent-workflows/: CONCURRENT_CLAIM_CHECKLIST.md  CONTRACT_CHANGE_REQUEST.md  INTEGRATION_AGENT_CHECKLIST.md  MODULE_HANDOFF_REPORT.md  README.md  RUNTIME_RESEARCH_TEMPLATE.md  WAVE1_TASK_TEMPLATES.md
docs/architecture/: TRACER_VERTICAL_SLICE.md  W0-A_COMPLETION_REPORT.md
docs/contracts/: RUNTIME_ADAPTER_CONTRACT_V1.md  TAURI_COMMAND_CONTRACT_V1.md  TRACER_EVENT_PROTOCOL_V1.md
docs/decisions/: ADR-001-runtime-sidecar.md  ADR-002-event-normalization.md
docs/integration/: AUTHENTICODE_SIGNING_READINESS.md  DESKTOP_GUI_READINESS.md  DESKTOP_PRODUCT_READINESS.md  DRAIN_LIFECYCLE_CONTRACT.md  FINAL_GATE_0_REPORT.md  FULL_GUI_JOURNEY_CONTRACT.md  GUI_RELIABILITY_READINESS.md  LIVE_APPROVAL_READINESS.md  LIVE_GUI_AUTHORIZATION_CONTRACT.md  LIVE_GUI_READINESS.md  LIVE_PROVIDER_GUI_READINESS.md  LIVE_PROVIDER_READINESS.md  RELEASE_DISTRIBUTION_CHECKLIST.md  RELEASE_PROVENANCE_CONTRACT.md  RELEASE_SIGNING_CONTRACT.md  REQUIREMENT_TRACEABILITY_MATRIX.md  STAGE_0_1_INTEGRATION_REPORT.md  TAURI_E2E_INFRASTRUCTURE_READINESS.md  TRACER_0_1_1_DISTRIBUTION_READINESS.md  TRACER_0_1_1_RC_READINESS.md  TRACER_0_1_1_TESTER_READINESS.md  VERTICAL_SLICE_1_ACCEPTANCE.md  VS1_PRODUCT_READINESS.md  W1_F_HANDOFF_CONTRACT.md  W2_2_B_ENTRY_CRITERIA.md  W2_2_B_LAUNCH_AUTHORIZATION.md  W2_2_B_LAUNCH_AUTHORIZATION_FINAL.md  W2_MULTI_SESSION_CONTRACT.md  W2_PRESENTATION_CONTRACT.md  WAVE_1_1_INTEGRATION_REPORT.md  WAVE_1_1_TEST_MATRIX.md  WAVE_1_2_INTEGRATION_REPORT.md  WAVE_1_2_READINESS.md  WAVE_1_2_TEST_MATRIX.md  WAVE_1_3_INTEGRATION_REPORT.md  WAVE_1_3_TEST_MATRIX.md  WAVE_1_4_HARDENING_REPORT.md  WAVE_1_4_TEST_MATRIX.md  (+29 more)
tests/integration/storage/: Cargo.toml  README.md
tests/integration/storage/src/: lib.rs
tests/soak/: Cargo.toml
tests/soak/src/: lib.rs  soak_scenarios.rs
tests/stress/: Cargo.toml
tests/stress/drain-lifecycle/: README.md
tests/stress/src/: lib.rs  stress_drain_lifecycle.rs  stress_multi_session.rs  stress_repeated_sessions.rs
tools/live-grok-smoke/: Cargo.toml  README.md
tools/live-grok-smoke/src/: approval.rs  discovery.rs  evidence.rs  main.rs  sanitize.rs  stages.rs
tools/release/: sign.mjs  (+12 more)
(+254 files in other folders)
