[package]
name = "tracer-control-plane"
version = "0.1.0"
description = "Tracer control plane (W1-F): runtime supervision, session lifecycle, sole SQLite writer, presentation projection"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tracer-domain = { workspace = true }
tracer-storage = { workspace = true }
tracer-runtime-adapter = { workspace = true }
tracer-heli = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
