[package]
name = "tracer-domain"
version = "0.1.0"
edition.workspace = true
description = "Tracer domain types and Event Protocol v1 envelope (W1-B)"
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
