[package]
name = "tracer-heli"
version = "0.1.0"
edition = "2021"
description = "Read-only HeliHarness workspace status adapter for Tracer (W1-H)"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
