[package]
name = "tracer-heli"
version = "0.1.0"
edition.workspace = true
description = "Read-only HeliHarness workspace status adapter for Tracer (W1-H)"
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
