[package]
name = "tracer-process"
version = "0.1.0"
edition.workspace = true
description = "Tracer runtime process manager: spawn, pipes, shutdown, orphan prevention (W1-C)"
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
thiserror = { workspace = true }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "tracer-process-test-helper"
path = "src/bin/process_test_helper.rs"
required-features = []

[dev-dependencies]
# Integration-style unit tests use the helper binary via CARGO_BIN_EXE_*.
