[package]
name = "tracer-storage"
version = "0.1.0"
edition = "2021"
description = "Tracer SQLite storage foundation: migrations, repositories, session/event persistence (W1-E)"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
