[package]
name = "tracer-storage"
version = "0.1.0"
edition.workspace = true
description = "Tracer SQLite storage foundation: migrations, repositories, session/event persistence (W1-E)"
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# Canonical domain IDs / session vocabulary from W1-B (no second model).
tracer-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true }
