[package]
name = "tracer-vs1-soak"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "VS1-H3 concurrency and persistence soak suite (fake ACP + file SQLite)"
license.workspace = true

[[test]]
name = "soak_scenarios"
path = "src/soak_scenarios.rs"

[dependencies]
tracer-control-plane = { workspace = true }
tracer-domain = { workspace = true }
tracer-storage = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
uuid = { workspace = true }
time = { workspace = true }
