[package]
name = "live-grok-smoke"
version = "0.1.0"
edition.workspace = true
description = "Manual opt-in live Grok stock runtime smoke harness (VS1-H1)"
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "live-grok-smoke"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tracer-domain = { workspace = true }
tracer-process = { workspace = true }
tracer-runtime-adapter = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
