[package]
name = "tracer-storage-integration"
version = "0.1.0"
edition = "2021"
publish = false
description = "Integration tests for tracer-storage (VS-10 / F-S*)"

[[test]]
name = "vs10_persistence_reload"
path = "src/vs10_persistence_reload.rs"

[dependencies]
tracer-storage = { path = "../../../crates/tracer-storage" }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
