[package]
name = "tracer-storage-integration"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "Integration tests for tracer-storage (VS-10 / F-S*)"

[[test]]
name = "vs10_persistence_reload"
path = "src/vs10_persistence_reload.rs"

[dependencies]
tracer-storage = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
